; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ena/extr_ena.c_ena_init_io_rings_common.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ena/extr_ena.c_ena_init_io_rings_common.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ena_adapter = type { i32 }
%struct.ena_ring = type { i32, i64, i32, %struct.ena_adapter*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ena_adapter*, %struct.ena_ring*, i32)* @ena_init_io_rings_common to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ena_init_io_rings_common(%struct.ena_adapter* %0, %struct.ena_ring* %1, i32 %2) #0 {
  %4 = alloca %struct.ena_adapter*, align 8
  %5 = alloca %struct.ena_ring*, align 8
  %6 = alloca i32, align 4
  store %struct.ena_adapter* %0, %struct.ena_adapter** %4, align 8
  store %struct.ena_ring* %1, %struct.ena_ring** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.ena_ring*, %struct.ena_ring** %5, align 8
  %9 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %8, i32 0, i32 4
  store i32 %7, i32* %9, align 8
  %10 = load %struct.ena_adapter*, %struct.ena_adapter** %4, align 8
  %11 = load %struct.ena_ring*, %struct.ena_ring** %5, align 8
  %12 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %11, i32 0, i32 3
  store %struct.ena_adapter* %10, %struct.ena_adapter** %12, align 8
  %13 = load %struct.ena_adapter*, %struct.ena_adapter** %4, align 8
  %14 = getelementptr inbounds %struct.ena_adapter, %struct.ena_adapter* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.ena_ring*, %struct.ena_ring** %5, align 8
  %17 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %16, i32 0, i32 2
  store i32 %15, i32* %17, align 8
  %18 = load %struct.ena_ring*, %struct.ena_ring** %5, align 8
  %19 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %18, i32 0, i32 0
  store i32 0, i32* %19, align 8
  %20 = load %struct.ena_ring*, %struct.ena_ring** %5, align 8
  %21 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %20, i32 0, i32 1
  store i64 0, i64* %21, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
